# silver-rain

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  autoclean.sh  autogen.sh  configure.ac  silver  silver-rain  silver-rain.css  style.css
data/: Makefile.am  silver-rain.desktop.in
data/icons/: Makefile.am
po/: ChangeLog  Makevars  POTFILES.in  ru.po
src/silver/: Makefile.am  __main__.py  application.py  config.py  css.py  globals.py.in  main.py  messenger.py  msktz.py  notifications.py  player.py  schedule.py  silver-rain  timer.py  translations.py
src/silver/gui/: Makefile.am  __init__.py  about.py  common.py  controlpanel.py  css.py  dialog.py  menubar.py  messenger.py  notifications.py  preferences.py  schedtree.py  selection.py  statusicon.py  window.py
