# Copyright (C) 2015 Petr Skovoroda <petrskovoroda@gmail.com>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; if not, write to the
# Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
# Boston, MA 02110-1301 USA

AC_INIT([silver], [1.0.2])
AM_INIT_AUTOMAKE([foreign])
AM_PATH_PYTHON(3.3)

AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION(0.19)

AC_CONFIG_FILES([ po/Makefile.in
                  Makefile
                  data/Makefile
                  data/silver-rain.desktop
                  data/icons/Makefile
                  src/silver/Makefile
                  src/silver/globals.py
                  src/silver/gui/Makefile
])
AC_OUTPUT
