SUBDIRS=gui

silvermoduledir = $(pkgpythondir)
silvermodule_PYTHON =   __init__.py \
                        __main__.py \
                        application.py \
                        config.py \
                        globals.py \
                        main.py \
                        msktz.py \
                        player.py \
                        schedule.py \
                        timer.py \
                        translations.py

silverdir = $(bindir)
bin_SCRIPTS = silver-rain
EXTRA_DIST = $(bin_SCRIPTS)
