silvermoduleguidir = $(pkgpythondir)/gui
silvermodulegui_PYTHON =    __init__.py \
                            about.py \
                            common.py \
                            controlpanel.py \
                            css.py \
                            dialog.py \
                            menubar.py \
                            messenger.py \
                            notifications.py \
                            preferences.py \
                            schedtree.py \
                            selection.py \
                            statusicon.py \
                            window.py
